<resources>
    <string name="app_name">WorkTracking</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_button">Add work</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="prijasnji_radovi">Work sessions</string>
    <string name="spremi">Save</string>
    <string name="postavke">Settings</string>
    <string name="nova_satnica">New pay/hr</string>
    <string name="statistike">Statistics</string>
    <string name="zatvori">Close</string>
    <string name="sati_rada">Work time</string>
    <string name="zaradeno">Earned</string>
    <string name="_0h_0m">0h 0m</string>
    <string name="_0eur">0 €</string>
    <string name="obrisi_povijest">Delete history</string>
    <string name="add_date">DD.MM.YYYY.</string>
</resources>