<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/statistike"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sati_rada"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/totalTimeWorked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0h_0m"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zaradeno"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/totalEarned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0eur"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zatvori" />

</LinearLayout>